--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "astro": "^4.16.0"
   },
   "devDependencies": {
+    "@astrojs/partytown": "^2.1.4",
+    "@astrojs/tailwind": "^6.0.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
